# hydrostab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
hydrostab/: PointChange.py  Script_Comparison.py  __init__.py  experimental.py  fft.py  first_derivitive_normalized_stddev.py  metrics.py  ras.py  utils.py
notebooks/: fft-hecras-mesh.md  fft-hecras-reflines.md  fft-testing.md  stability-examples.ipynb
tests/: test_metrics.py  test_stability.py  test_stable.py
tests/data/hydrographs/DSS_Hydro/: 13- Quick ramp-up small oscillation.csv  16- Borderline Stable.csv  17- Unstable low flow.csv  19- Borderline Stable small oscillations.csv  7- Unstable low flow.csv  Master.csv
tests/data/hydrographs/DSS_Hydrofortesting/: 1- Borderline unstable.csv  3- Stable with small oscillations throughout.csv
tests/data/hydrographs/DSS_Hydrographs/: 11- Mostly Stable but beginning and end.csv  12-Mostly Stable- Some Instability.csv  14- Quick Ramp-up mostly stable.csv  15- Unstable at end.csv  18- Stable with small oscillations.csv  20- Stable small oscillations.csv  21 - Unstable.csv  22 - Stable with tiny oscillations.csv  23- Borderline unstable.csv  24 - Normal Stable.csv  25- Borderline Stable.csv  4- Severly Unstable.csv  6 - Unstable.csv
tests/data/hydrographs/stable/: 10 - Normal Stable.csv  12-Mostly Stable- Some Instability.csv  13- Quick ramp-up small oscillation.csv  14- Quick Ramp-up mostly stable.csv  18- Stable with small oscillations.csv  2- Weird but Mostly Stable.csv  20- Stable small oscillations.csv  24 - Normal Stable.csv  (+10 more)
(+16 files in other folders)
