[project]
name = "hydrostab"
description = "Evaluation of hydrodynamic model stability."
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
version = "0.1.0"
dependencies = ["pandas", "scipy"]

[project.optional-dependencies]
dev = ["pre-commit", "ruff", "pytest", "pytest-cov"]
# docs = ["sphinx", "numpydoc", "sphinx_rtd_theme"]

[project.urls]
repository = "https://github.com/fema-ffrd/hydrostab"

# [project.scripts]
# rashdf = "cli:main"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"

[tool.ruff.lint]
select = ["D"]

# [tool.ruff.lint.pydocstyle]
# convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"docs/**" = ["D"]